# python-monorepo

./: README.md  hello.py  justfile  pyproject.toml
