[project]
name = "python-uv-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
# dependencies = [
#     "lib-a",
#     "lib-b"
# ]

[tool.uv.sources]
lib-a = { workspace = true }
lib-b = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]
